5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1637_2703.log
== TEST (2019-04-04 12:32:45) 
-- CODE:
pessoa = int(input("idade: "))

if(pessoa >= 18 ):
	mensagem = "eleitor"
else(pessoa < 18):
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else(pessoa < 18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:33:36) 
-- CODE:
pessoa = int(input("idade: "))

if(pessoa >= 18):
	mensagem = "eleitor"
else(pessoa < 18):
	mensagem = "nao_eleitor"	
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else(pessoa < 18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:33:49) 
-- CODE:
pessoa = int(input("idade: "))

if(pessoa >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"	
print(mensagem)
-- EXECUTION TIME:
0.169534
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:33:55) 
-- CODE:
pessoa = int(input("idade: "))

if(pessoa >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:47:04) 
-- CODE:
pessoa = int(input("idade: "))

if(pessoa >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"	
print(mensagem)
-- EXECUTION TIME:
0.136238
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
